# FUZIX

./: .hgtags  .travis.yml
Applications/: build.mk
Applications/cursesgames/: Makefile.esp8266
Applications/util/: Makefile.esp8266  blkdiscard.c  fforth_tests.fth
Kernel/: bankfixed.c  devio.c  flat.c  kdata.c  kernelarm.def  start.c  syscall_exec32.c
Kernel/cpu-68000/: cpu.h
Kernel/cpu-armv6/: cpu.h
Kernel/dev/: mbr.c
Kernel/include/: kdata.h  kernel.h  kernel32.h
Kernel/platform-esp8266/: Makefile  config.h  devices.c  swapper.c  tricks.S
Kernel/platform-raspberrypi/: README.md  build.mk  config.h  crt0.S  devices.c  devsd_altmmc.c  devsd_sdhost.c  devtty.c  externs.h  kernel.def  libc.c  main.c  raspberrypi.c  raspberrypi.h  raspberrypi.ld  tricks.S  tricks_c.c  udata.c
Kernel/platform-rpipico/: CMakeLists.txt  Makefile  config.h  core1.c  core1.h  devices.c  devsdspi.c  devtty.c  globals.h  main.c  pio_spi_sdcard.c  pio_spi_sdcard.h  spi_sdcard.pio
Kernel/platform-rpipico/textmode/: CMakeLists.txt  compressed_rawfont8.c  main.c  textmode.c  textmode.h
